added selectcomment function

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -32,22 +32,9 @@
         <h2 class="ms-font-xl"> Discover what Office Add-ins can do for you today! </h2>
         <ul class="ms-List ms-welcome__features">
             <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
-                <span class="ms-font-m">Achieve more with Office integration</span>
-            </li>
-            <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Unlock ms-font-xl"></i>
-                <span class="ms-font-m">Unlock features and functionality</span>
-            </li>
-            <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Design ms-font-xl"></i>
-                <span class="ms-font-m">Create and visualize like a pro</span>
-            </li>
-            <li class="ms-ListItem">
                 <i class="ms-Icon ms-Icon--Design ms-font-xl"></i>
                 <span class="ms-Button-label">Comment Me</span>
             </li>
-            <button id="proverb">Add Chinese proverb</button>
         </ul>
         <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p>
         <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
@@ -56,6 +43,10 @@
         <p class="ms-font-l">After running, then click <b>Comment</b>.</p>
         <div role="button" id="comment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">Comment</span>
+        </div>
+        <p class="ms-font-l">Comment selected text <b>select comment</b>.</p>
+        <div role="button" id="selectcomment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+            <span class="ms-Button-label">Select and Comment</span>
         </div>
     </main>
 </body>
