removed commented line

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -37,7 +37,7 @@
             <span class="ms-Button-label">Run</span>
         </div>
         <div role="button" id="grammar" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
-            <span class="ms-Button-label">Improve Grammar</span>
+            <span class="ms-Button-label">Grammar Correction</span>
         </div>
         <div role="button" id="comment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">Comment</span>
