--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -21,20 +21,16 @@
 </head>
 
 <body class="ms-font-m ms-welcome ms-Fabric">
-    <header class="ms-welcome__header ms-bgColor-neutralLighter">
+    <!-- <header class="ms-welcome__header ms-bgColor-neutralLighter">
         <img width="90" height="90" src="../../assets/logo-filled.png" alt="Contoso" title="Contoso" />
         <h1 class="ms-font-su">Welcome</h1>
-    </header>
+    </header> -->
     <section id="sideload-msg" class="ms-welcome__main">
         <h2 class="ms-font-xl">Please sideload your add-in to see app body.</h2>
     </section>
     <main id="app-body" class="ms-welcome__main" style="display: none;">
-        <h2 class="ms-font-xl"> Discover what Office Add-ins can do for you today! </h2>
+        <h2 class="ms-font-xl"> Let's start giving feedback! </h2>
         <ul class="ms-List ms-welcome__features">
-            <li class="ms-ListItem">
-                <i class="ms-Icon ms-Icon--Design ms-font-xl"></i>
-                <span class="ms-Button-label">Comment Me</span>
-            </li>
         </ul>
         <p class="ms-font-l">Modify the source files, then click <b>Run</b>.</p>
         <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
@@ -47,6 +43,8 @@
         <p class="ms-font-l">Comment selected text <b>select comment</b>.</p>
         <div role="button" id="selectcomment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">Select and Comment</span>
+        <div role="button" id="aicomment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+            <span class="ms-Button-label">aiComment</span>
         </div>
     </main>
 </body>
