working gpt api query

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -42,10 +42,10 @@
         </div>
         <p class="ms-font-l">Comment selected text <b>select comment</b>.</p>
         <div role="button" id="selectcomment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
-            <span class="ms-Button-label">Select and Comment</span>
-        <div role="button" id="aicomment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+            <span class="ms-Button-label">AI Comment</span>
+        <!-- <div role="button" id="aicomment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">aiComment</span>
-        </div>
+        </div> -->
     </main>
 </body>
 
