attempt to Create Prompt for Comment button and menu select

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -44,6 +44,28 @@
         </div>
         <div role="button" id="selectcomment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
             <span class="ms-Button-label">AI Comment</span>
+        </div>
+        <div role="button" id="open-menu-button" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
+            <span class="ms-Button-label">Create Prompt for Comment</span>
+        </div>
+        <button id="open-menu-button">Open Menu</button>
+        <div id="promptcomment" class="custom-select" style="width:200px;">
+            <select>
+              <option value="0">Select car:</option>
+              <option value="1">Audi</option>
+              <option value="2">BMW</option>
+              <option value="3">Citroen</option>
+              <option value="4">Ford</option>
+              <option value="5">Honda</option>
+              <option value="6">Jaguar</option>
+              <option value="7">Land Rover</option>
+              <option value="8">Mercedes</option>
+              <option value="9">Mini</option>
+              <option value="10">Nissan</option>
+              <option value="11">Toyota</option>
+              <option value="12">Volvo</option>
+            </select>
+          </div>
     </main>
 </body>
 
