final touches on aesthetics

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -38,15 +38,8 @@
       </div> -->
       <div role="button" id="grammar" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
         <span class="ms-Button-label"><b>Grammar Correction</b></span>
-        <p class="ms-font-m"><i>Provides explanations of grammar errors in the selected text.</i></p>
-      </div>
-      <!-- <div role="button" id="comment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
-        <span class="ms-Button-label">Comment</span>
-      </div> -->
-      <!-- <div role="button" id="selectcomment" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
-        <span class="ms-Button-label">AI Comment</span>
-      </div> -->
-      <div>
+        <p class="ms-font-m"><i>Click to provide explanation of grammar errors in the selected text.</i></p>
+     
         <p class="custom-select ms-font-xl"><b>Quick Comment</b></p>
         <p class="ms-font-m"><i>Choose a standard comment response for the selected text.</i></p>
         <select id="mySelect2" name="mySelect2">
@@ -65,11 +58,11 @@
         <p class="ms-font-m"><i>AI will create a comment response based on the selected prompt.</i></p>
         <select id="mySelect" name="mySelect">
           <option class="dropdown" value="0" selected>Select an option.</option>
-          <option class="dropdown" value="clarify">This can be improved for clarity. For example, you could write:</option>
+          <option class="dropdown" value="clarify">This can be improved for clarity. For example, you could rephrase like this:</option>
           <option class="dropdown" value="elaborate">This is too vague. Can you elaborate? For example:</option>
           <option class="dropdown" value="active">Use active voice instead. For example, you could write:</option>
-          <option class="dropdown" value="critique">Here are 3 ways the content of your passage can be improved:</option>
-          <option class="dropdown" value="brainstorm">Here are 3 ideas you can brainstorm to further develop the passage:</option>
+          <option class="dropdown" value="critique">Here are some ways the content of your passage can be improved:</option>
+          <option class="dropdown" value="brainstorm">Here are 3 ideas you can brainstorm to further develop your ideas:</option>
         </select>
       </div>
       <div>
